# web_server_rust

./: Cargo.toml  LICENSE
migrations/2021-03-21-143710_create_posts/: up.sql
src/: lib.rs  models.rs  schema.rs
